tests/baselines/reference/parserSkippedTokens5.errors.txt
parserSkippedTokens5.ts(1,1): error TS1127: Invalid character.


==== parserSkippedTokens5.ts (1 errors) ====
    \ /*foo*/ ;
    
!!! error TS1127: Invalid character.